# agent-skillbook

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: validate.yml
docs/: beginner-guide.md  description-writing-guide.md  skill-writing-guide.md  update-workflow.md  what-is-a-skill.md
skills/beginner-moodle-programming-question/: CHANGELOG.md  EXAMPLES.md  INSTRUCTIONS.md  TESTS.md  skill.yaml
skills/code-readability-best-practices/: CHANGELOG.md  EXAMPLES.md  INSTRUCTIONS.md  TESTS.md  skill.yaml
skills/experiment-runbook-discipline/: CHANGELOG.md  EXAMPLES.md  INSTRUCTIONS.md  TESTS.md  skill.yaml
skills/good-description-writing/: CHANGELOG.md  EXAMPLES.md  INSTRUCTIONS.md  TESTS.md  skill.yaml
skills/good-function-design/: CHANGELOG.md  EXAMPLES.md  INSTRUCTIONS.md  TESTS.md  skill.yaml
skills/handoff/: CHANGELOG.md  EXAMPLES.md  INSTRUCTIONS.md  TESTS.md  skill.yaml
skills/handoff-resume/: CHANGELOG.md  EXAMPLES.md  INSTRUCTIONS.md  TESTS.md  skill.yaml
skills/hyperparameter-search-strategy/: CHANGELOG.md  EXAMPLES.md  INSTRUCTIONS.md  TESTS.md  skill.yaml
skills/implementation-aligned-planning/: CHANGELOG.md  EXAMPLES.md  INSTRUCTIONS.md  TESTS.md  skill.yaml
skills/intellij-line-debugging/: CHANGELOG.md  EXAMPLES.md  INSTRUCTIONS.md  TESTS.md  skill.yaml
src/agent_skillbook/: __init__.py  (+5 more)
tests/: test_registry.py  test_renderers.py  test_validation.py
tools/: build_catalog.py  list_skills.py  render_claude_skill.py  render_gemini_gem.py  render_openai_skill.py  validate_skills.py
(+142 files in other folders)
